--- a/notebooks/test_api_data.ipynb
+++ b/notebooks/test_api_data.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload\n",
@@ -37,6 +28,8 @@
     "from enum import Enum\n",
     "from scipy.stats import kendalltau, spearmanr\n",
     "\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "\n",
     "from IPython.display import IFrame\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -44,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +46,7 @@
        "'/Users/mohammadzainabbas/Masters/CS/Decision-Modelling/nutri-score'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,225 +54,246 @@
    "source": [
     "parent_dir = abspath(join(getcwd(), pardir))\n",
     "data_dir = join(parent_dir, 'data')\n",
-    "data_file = join(data_dir, 'raw_products.csv')\n",
-    "output_file = join(data_dir, \"nutri_food_data.csv\")\n",
+    "data_file = join(data_dir, 'products.csv')\n",
     "parent_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>image_url</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>energy_points</th>\n",
+       "      <th>energy_value</th>\n",
+       "      <th>fiber</th>\n",
+       "      <th>fiber_points</th>\n",
+       "      <th>...</th>\n",
+       "      <th>omega-6-fat_serving</th>\n",
+       "      <th>omega-6-fat_unit</th>\n",
+       "      <th>omega-6-fat_value</th>\n",
+       "      <th>omega-3-fat</th>\n",
+       "      <th>omega-3-fat_100g</th>\n",
+       "      <th>omega-3-fat_label</th>\n",
+       "      <th>omega-3-fat_unit</th>\n",
+       "      <th>omega-3-fat_value</th>\n",
+       "      <th>omega-6-fat_label</th>\n",
+       "      <th>potassium_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3613042717385</td>\n",
+       "      <td>Crème de noisette</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>Phil Gourmet</td>\n",
+       "      <td>Aliments et boissons à base de végétaux, Alime...</td>\n",
+       "      <td>1368.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>327.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8421251894903</td>\n",
+       "      <td>Corazones de alcachofa</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>alcachofas</td>\n",
+       "      <td>Alimentos y bebidas de origen vegetal, Aliment...</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8410086940022</td>\n",
+       "      <td>Espinacas</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>Auchan</td>\n",
+       "      <td>Alimentos y bebidas de origen vegetal, Aliment...</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8435307401458</td>\n",
+       "      <td>Champiñones enteros</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>Auchan</td>\n",
+       "      <td>Alimentos y bebidas de origen vegetal, Aliment...</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3112940769613</td>\n",
+       "      <td>Maiz dulce en grano</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>Auchan</td>\n",
+       "      <td>Aliments et boissons à base de végétaux, Alime...</td>\n",
+       "      <td>372.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 433 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['code',\n",
-       " 'url',\n",
-       " 'creator',\n",
-       " 'created_t',\n",
-       " 'created_datetime',\n",
-       " 'last_modified_t',\n",
-       " 'last_modified_datetime',\n",
-       " 'product_name',\n",
-       " 'abbreviated_product_name',\n",
-       " 'generic_name',\n",
-       " 'quantity',\n",
-       " 'packaging',\n",
-       " 'packaging_tags',\n",
-       " 'packaging_en',\n",
-       " 'packaging_text',\n",
-       " 'brands',\n",
-       " 'brands_tags',\n",
-       " 'categories',\n",
-       " 'categories_tags',\n",
-       " 'categories_en',\n",
-       " 'origins',\n",
-       " 'origins_tags',\n",
-       " 'origins_en',\n",
-       " 'manufacturing_places',\n",
-       " 'manufacturing_places_tags',\n",
-       " 'labels',\n",
-       " 'labels_tags',\n",
-       " 'labels_en',\n",
-       " 'emb_codes',\n",
-       " 'emb_codes_tags',\n",
-       " 'first_packaging_code_geo',\n",
-       " 'cities',\n",
-       " 'cities_tags',\n",
-       " 'purchase_places',\n",
-       " 'stores',\n",
-       " 'countries',\n",
-       " 'countries_tags',\n",
-       " 'countries_en',\n",
-       " 'ingredients_text',\n",
-       " 'ingredients_tags',\n",
-       " 'ingredients_analysis_tags',\n",
-       " 'allergens',\n",
-       " 'allergens_en',\n",
-       " 'traces',\n",
-       " 'traces_tags',\n",
-       " 'traces_en',\n",
-       " 'serving_size',\n",
-       " 'serving_quantity',\n",
-       " 'no_nutriments',\n",
-       " 'additives_n',\n",
-       " 'additives',\n",
-       " 'additives_tags',\n",
-       " 'additives_en',\n",
-       " 'nutriscore_score',\n",
-       " 'nutriscore_grade',\n",
-       " 'nova_group',\n",
-       " 'pnns_groups_1',\n",
-       " 'pnns_groups_2',\n",
-       " 'food_groups',\n",
-       " 'food_groups_tags',\n",
-       " 'food_groups_en',\n",
-       " 'states',\n",
-       " 'states_tags',\n",
-       " 'states_en',\n",
-       " 'brand_owner',\n",
-       " 'ecoscore_score',\n",
-       " 'ecoscore_grade',\n",
-       " 'nutrient_levels_tags',\n",
-       " 'product_quantity',\n",
-       " 'owner',\n",
-       " 'data_quality_errors_tags',\n",
-       " 'unique_scans_n',\n",
-       " 'popularity_tags',\n",
-       " 'completeness',\n",
-       " 'last_image_t',\n",
-       " 'last_image_datetime',\n",
-       " 'main_category',\n",
-       " 'main_category_en',\n",
-       " 'image_url',\n",
-       " 'image_small_url',\n",
-       " 'image_ingredients_url',\n",
-       " 'image_ingredients_small_url',\n",
-       " 'image_nutrition_url',\n",
-       " 'image_nutrition_small_url',\n",
-       " 'energy-kj_100g',\n",
-       " 'energy-kcal_100g',\n",
-       " 'energy_100g',\n",
-       " 'energy-from-fat_100g',\n",
-       " 'fat_100g',\n",
-       " 'saturated-fat_100g',\n",
-       " '-butyric-acid_100g',\n",
-       " '-caproic-acid_100g',\n",
-       " '-caprylic-acid_100g',\n",
-       " '-capric-acid_100g',\n",
-       " '-lauric-acid_100g',\n",
-       " '-myristic-acid_100g',\n",
-       " '-palmitic-acid_100g',\n",
-       " '-stearic-acid_100g',\n",
-       " '-arachidic-acid_100g',\n",
-       " '-behenic-acid_100g',\n",
-       " '-lignoceric-acid_100g',\n",
-       " '-cerotic-acid_100g',\n",
-       " '-montanic-acid_100g',\n",
-       " '-melissic-acid_100g',\n",
-       " 'monounsaturated-fat_100g',\n",
-       " 'polyunsaturated-fat_100g',\n",
-       " 'omega-3-fat_100g',\n",
-       " '-alpha-linolenic-acid_100g',\n",
-       " '-eicosapentaenoic-acid_100g',\n",
-       " '-docosahexaenoic-acid_100g',\n",
-       " 'omega-6-fat_100g',\n",
-       " '-linoleic-acid_100g',\n",
-       " '-arachidonic-acid_100g',\n",
-       " '-gamma-linolenic-acid_100g',\n",
-       " '-dihomo-gamma-linolenic-acid_100g',\n",
-       " 'omega-9-fat_100g',\n",
-       " '-oleic-acid_100g',\n",
-       " '-elaidic-acid_100g',\n",
-       " '-gondoic-acid_100g',\n",
-       " '-mead-acid_100g',\n",
-       " '-erucic-acid_100g',\n",
-       " '-nervonic-acid_100g',\n",
-       " 'trans-fat_100g',\n",
-       " 'cholesterol_100g',\n",
-       " 'carbohydrates_100g',\n",
-       " 'sugars_100g',\n",
-       " '-sucrose_100g',\n",
-       " '-glucose_100g',\n",
-       " '-fructose_100g',\n",
-       " '-lactose_100g',\n",
-       " '-maltose_100g',\n",
-       " '-maltodextrins_100g',\n",
-       " 'starch_100g',\n",
-       " 'polyols_100g',\n",
-       " 'fiber_100g',\n",
-       " 'soluble-fiber_100g',\n",
-       " 'insoluble-fiber_100g',\n",
-       " 'proteins_100g',\n",
-       " 'casein_100g',\n",
-       " 'serum-proteins_100g',\n",
-       " 'nucleotides_100g',\n",
-       " 'salt_100g',\n",
-       " 'sodium_100g',\n",
-       " 'alcohol_100g',\n",
-       " 'vitamin-a_100g',\n",
-       " 'beta-carotene_100g',\n",
-       " 'vitamin-d_100g',\n",
-       " 'vitamin-e_100g',\n",
-       " 'vitamin-k_100g',\n",
-       " 'vitamin-c_100g',\n",
-       " 'vitamin-b1_100g',\n",
-       " 'vitamin-b2_100g',\n",
-       " 'vitamin-pp_100g',\n",
-       " 'vitamin-b6_100g',\n",
-       " 'vitamin-b9_100g',\n",
-       " 'folates_100g',\n",
-       " 'vitamin-b12_100g',\n",
-       " 'biotin_100g',\n",
-       " 'pantothenic-acid_100g',\n",
-       " 'silica_100g',\n",
-       " 'bicarbonate_100g',\n",
-       " 'potassium_100g',\n",
-       " 'chloride_100g',\n",
-       " 'calcium_100g',\n",
-       " 'phosphorus_100g',\n",
-       " 'iron_100g',\n",
-       " 'magnesium_100g',\n",
-       " 'zinc_100g',\n",
-       " 'copper_100g',\n",
-       " 'manganese_100g',\n",
-       " 'fluoride_100g',\n",
-       " 'selenium_100g',\n",
-       " 'chromium_100g',\n",
-       " 'molybdenum_100g',\n",
-       " 'iodine_100g',\n",
-       " 'caffeine_100g',\n",
-       " 'taurine_100g',\n",
-       " 'ph_100g',\n",
-       " 'fruits-vegetables-nuts_100g',\n",
-       " 'fruits-vegetables-nuts-dried_100g',\n",
-       " 'fruits-vegetables-nuts-estimate_100g',\n",
-       " 'fruits-vegetables-nuts-estimate-from-ingredients_100g',\n",
-       " 'collagen-meat-protein-ratio_100g',\n",
-       " 'cocoa_100g',\n",
-       " 'chlorophyl_100g',\n",
-       " 'carbon-footprint_100g',\n",
-       " 'carbon-footprint-from-meat-or-fish_100g',\n",
-       " 'nutrition-score-fr_100g',\n",
-       " 'nutrition-score-uk_100g',\n",
-       " 'glycemic-index_100g',\n",
-       " 'water-hardness_100g',\n",
-       " 'choline_100g',\n",
-       " 'phylloquinone_100g',\n",
-       " 'beta-glucan_100g',\n",
-       " 'inositol_100g',\n",
-       " 'carnitine_100g']"
+       "              id                    name  \\\n",
+       "0  3613042717385       Crème de noisette   \n",
+       "1  8421251894903  Corazones de alcachofa   \n",
+       "2  8410086940022               Espinacas   \n",
+       "3  8435307401458     Champiñones enteros   \n",
+       "4  3112940769613     Maiz dulce en grano   \n",
+       "\n",
+       "                                           image_url         brand  \\\n",
+       "0  https://images.openfoodfacts.org/images/produc...  Phil Gourmet   \n",
+       "1  https://images.openfoodfacts.org/images/produc...    alcachofas   \n",
+       "2  https://images.openfoodfacts.org/images/produc...        Auchan   \n",
+       "3  https://images.openfoodfacts.org/images/produc...        Auchan   \n",
+       "4  https://images.openfoodfacts.org/images/produc...        Auchan   \n",
+       "\n",
+       "                                          categories  energy  energy_points  \\\n",
+       "0  Aliments et boissons à base de végétaux, Alime...  1368.0            4.0   \n",
+       "1  Alimentos y bebidas de origen vegetal, Aliment...   138.0            0.0   \n",
+       "2  Alimentos y bebidas de origen vegetal, Aliment...    63.0            0.0   \n",
+       "3  Alimentos y bebidas de origen vegetal, Aliment...    92.0            0.0   \n",
+       "4  Aliments et boissons à base de végétaux, Alime...   372.0            1.0   \n",
+       "\n",
+       "   energy_value  fiber  fiber_points  ...  omega-6-fat_serving  \\\n",
+       "0         327.0    0.0           0.0  ...                  NaN   \n",
+       "1          33.0    0.0           0.0  ...                  NaN   \n",
+       "2          15.0    0.0           0.0  ...                  NaN   \n",
+       "3          22.0    0.0           0.0  ...                  NaN   \n",
+       "4          89.0    0.0           0.0  ...                  NaN   \n",
+       "\n",
+       "   omega-6-fat_unit  omega-6-fat_value  omega-3-fat omega-3-fat_100g  \\\n",
+       "0               NaN                NaN          NaN              NaN   \n",
+       "1               NaN                NaN          NaN              NaN   \n",
+       "2               NaN                NaN          NaN              NaN   \n",
+       "3               NaN                NaN          NaN              NaN   \n",
+       "4               NaN                NaN          NaN              NaN   \n",
+       "\n",
+       "   omega-3-fat_label  omega-3-fat_unit  omega-3-fat_value  omega-6-fat_label  \\\n",
+       "0                NaN               NaN                NaN                NaN   \n",
+       "1                NaN               NaN                NaN                NaN   \n",
+       "2                NaN               NaN                NaN                NaN   \n",
+       "3                NaN               NaN                NaN                NaN   \n",
+       "4                NaN               NaN                NaN                NaN   \n",
+       "\n",
+       "   potassium_label  \n",
+       "0              NaN  \n",
+       "1              NaN  \n",
+       "2              NaN  \n",
+       "3              NaN  \n",
+       "4              NaN  \n",
+       "\n",
+       "[5 rows x 433 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = dd.read_csv(data_file, sep='\\t', encoding='utf-8')\n",
-    "df.columns.to_list()"
+    "df = pd.read_csv(data_file)\n",
+    "df.head()"
    ]
   },
   {
@@ -617,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
