--- a/notebooks/test_api_data.ipynb
+++ b/notebooks/test_api_data.ipynb
@@ -3657,6 +3657,458 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id',\n",
+       " 'name',\n",
+       " 'image_url',\n",
+       " 'brand',\n",
+       " 'categories',\n",
+       " 'energy',\n",
+       " 'energy_points',\n",
+       " 'energy_value',\n",
+       " 'fiber',\n",
+       " 'fiber_points',\n",
+       " 'fiber_value',\n",
+       " 'fruits_vegetables_nuts_colza_walnut_olive_oils',\n",
+       " 'fruits_vegetables_nuts_colza_walnut_olive_oils_points',\n",
+       " 'fruits_vegetables_nuts_colza_walnut_olive_oils_value',\n",
+       " 'grade',\n",
+       " 'is_beverage',\n",
+       " 'is_cheese',\n",
+       " 'is_fat',\n",
+       " 'is_water',\n",
+       " 'negative_points',\n",
+       " 'positive_points',\n",
+       " 'proteins',\n",
+       " 'proteins_points',\n",
+       " 'proteins_value',\n",
+       " 'saturated_fat',\n",
+       " 'saturated_fat_points',\n",
+       " 'saturated_fat_ratio',\n",
+       " 'saturated_fat_ratio_points',\n",
+       " 'saturated_fat_ratio_value',\n",
+       " 'saturated_fat_value',\n",
+       " 'score',\n",
+       " 'sodium',\n",
+       " 'sodium_points',\n",
+       " 'sodium_value',\n",
+       " 'sugars',\n",
+       " 'sugars_points',\n",
+       " 'sugars_value',\n",
+       " 'carbohydrates',\n",
+       " 'carbohydrates_100g',\n",
+       " 'carbohydrates_unit',\n",
+       " 'carbohydrates_value',\n",
+       " 'energy-kcal',\n",
+       " 'energy-kcal_100g',\n",
+       " 'energy-kcal_unit',\n",
+       " 'energy-kcal_value',\n",
+       " 'energy-kcal_value_computed',\n",
+       " 'energy_100g',\n",
+       " 'energy_unit',\n",
+       " 'fat',\n",
+       " 'fat_100g',\n",
+       " 'fat_unit',\n",
+       " 'fat_value',\n",
+       " 'fruits-vegetables-nuts-estimate-from-ingredients_100g',\n",
+       " 'fruits-vegetables-nuts-estimate-from-ingredients_serving',\n",
+       " 'nova-group',\n",
+       " 'nova-group_100g',\n",
+       " 'nova-group_serving',\n",
+       " 'nutrition-score-fr',\n",
+       " 'nutrition-score-fr_100g',\n",
+       " 'proteins_100g',\n",
+       " 'proteins_unit',\n",
+       " 'salt',\n",
+       " 'salt_100g',\n",
+       " 'salt_unit',\n",
+       " 'salt_value',\n",
+       " 'saturated-fat',\n",
+       " 'saturated-fat_100g',\n",
+       " 'saturated-fat_unit',\n",
+       " 'saturated-fat_value',\n",
+       " 'sodium_100g',\n",
+       " 'sodium_unit',\n",
+       " 'sugars_100g',\n",
+       " 'sugars_unit',\n",
+       " 'carbohydrates_serving',\n",
+       " 'energy-kcal_serving',\n",
+       " 'energy-kj',\n",
+       " 'energy-kj_100g',\n",
+       " 'energy-kj_serving',\n",
+       " 'energy-kj_unit',\n",
+       " 'energy-kj_value',\n",
+       " 'energy-kj_value_computed',\n",
+       " 'energy_serving',\n",
+       " 'fat_serving',\n",
+       " 'fiber_100g',\n",
+       " 'fiber_serving',\n",
+       " 'fiber_unit',\n",
+       " 'proteins_serving',\n",
+       " 'salt_serving',\n",
+       " 'saturated-fat_serving',\n",
+       " 'sodium_serving',\n",
+       " 'starch',\n",
+       " 'starch_100g',\n",
+       " 'starch_label',\n",
+       " 'starch_serving',\n",
+       " 'starch_unit',\n",
+       " 'starch_value',\n",
+       " 'sugars_serving',\n",
+       " 'carbon-footprint-from-known-ingredients_100g',\n",
+       " 'carbon-footprint-from-known-ingredients_product',\n",
+       " 'carbon-footprint-from-known-ingredients_serving',\n",
+       " 'fruits-vegetables-nuts-estimate',\n",
+       " 'fruits-vegetables-nuts-estimate_100g',\n",
+       " 'fruits-vegetables-nuts-estimate_label',\n",
+       " 'fruits-vegetables-nuts-estimate_serving',\n",
+       " 'fruits-vegetables-nuts-estimate_unit',\n",
+       " 'fruits-vegetables-nuts-estimate_value',\n",
+       " 'alcohol',\n",
+       " 'alcohol_100g',\n",
+       " 'alcohol_serving',\n",
+       " 'alcohol_unit',\n",
+       " 'alcohol_value',\n",
+       " 'vitamin-b1',\n",
+       " 'vitamin-b12',\n",
+       " 'vitamin-b12_100g',\n",
+       " 'vitamin-b12_label',\n",
+       " 'vitamin-b12_serving',\n",
+       " 'vitamin-b12_unit',\n",
+       " 'vitamin-b12_value',\n",
+       " 'vitamin-b1_100g',\n",
+       " 'vitamin-b1_label',\n",
+       " 'vitamin-b1_serving',\n",
+       " 'vitamin-b1_unit',\n",
+       " 'vitamin-b1_value',\n",
+       " 'vitamin-b2',\n",
+       " 'vitamin-b2_100g',\n",
+       " 'vitamin-b2_label',\n",
+       " 'vitamin-b2_serving',\n",
+       " 'vitamin-b2_unit',\n",
+       " 'vitamin-b2_value',\n",
+       " 'vitamin-b9',\n",
+       " 'vitamin-b9_100g',\n",
+       " 'vitamin-b9_label',\n",
+       " 'vitamin-b9_serving',\n",
+       " 'vitamin-b9_unit',\n",
+       " 'vitamin-b9_value',\n",
+       " 'vitamin-pp',\n",
+       " 'vitamin-pp_100g',\n",
+       " 'vitamin-pp_label',\n",
+       " 'vitamin-pp_serving',\n",
+       " 'vitamin-pp_unit',\n",
+       " 'vitamin-pp_value',\n",
+       " 'fruits-vegetables-nuts',\n",
+       " 'fruits-vegetables-nuts_100g',\n",
+       " 'fruits-vegetables-nuts_serving',\n",
+       " 'fruits-vegetables-nuts_unit',\n",
+       " 'fruits-vegetables-nuts_value',\n",
+       " 'carbon-footprint-from-meat-or-fish_100g',\n",
+       " 'carbon-footprint-from-meat-or-fish_product',\n",
+       " 'carbon-footprint-from-meat-or-fish_serving',\n",
+       " 'iron',\n",
+       " 'iron_100g',\n",
+       " 'iron_label',\n",
+       " 'iron_serving',\n",
+       " 'iron_unit',\n",
+       " 'iron_value',\n",
+       " 'magnesium',\n",
+       " 'magnesium_100g',\n",
+       " 'magnesium_label',\n",
+       " 'magnesium_serving',\n",
+       " 'magnesium_unit',\n",
+       " 'magnesium_value',\n",
+       " 'phosphorus',\n",
+       " 'phosphorus_100g',\n",
+       " 'phosphorus_label',\n",
+       " 'phosphorus_serving',\n",
+       " 'phosphorus_unit',\n",
+       " 'phosphorus_value',\n",
+       " 'zinc',\n",
+       " 'zinc_100g',\n",
+       " 'zinc_label',\n",
+       " 'zinc_serving',\n",
+       " 'zinc_unit',\n",
+       " 'zinc_value',\n",
+       " 'fiber_modifier',\n",
+       " 'calcium',\n",
+       " 'calcium_100g',\n",
+       " 'calcium_serving',\n",
+       " 'calcium_unit',\n",
+       " 'calcium_value',\n",
+       " 'vitamin-d',\n",
+       " 'vitamin-d_100g',\n",
+       " 'vitamin-d_label',\n",
+       " 'vitamin-d_serving',\n",
+       " 'vitamin-d_unit',\n",
+       " 'vitamin-d_value',\n",
+       " 'vitamin-e',\n",
+       " 'vitamin-e_100g',\n",
+       " 'vitamin-e_label',\n",
+       " 'vitamin-e_serving',\n",
+       " 'vitamin-e_unit',\n",
+       " 'vitamin-e_value',\n",
+       " 'fruits-vegetables-nuts-dried',\n",
+       " 'fruits-vegetables-nuts-dried_100g',\n",
+       " 'fruits-vegetables-nuts-dried_serving',\n",
+       " 'fruits-vegetables-nuts-dried_unit',\n",
+       " 'fruits-vegetables-nuts-dried_value',\n",
+       " 'glucides assimilables',\n",
+       " 'glucides assimilables_100g',\n",
+       " 'glucides assimilables_serving',\n",
+       " 'glucides assimilables_unit',\n",
+       " 'glucides assimilables_value',\n",
+       " 'vitamin-c',\n",
+       " 'vitamin-c_100g',\n",
+       " 'vitamin-c_label',\n",
+       " 'vitamin-c_serving',\n",
+       " 'vitamin-c_unit',\n",
+       " 'vitamin-c_value',\n",
+       " 'saturated-fat_modifier',\n",
+       " 'nutriscore_not_applicable_for_category',\n",
+       " 'monounsaturated-fat',\n",
+       " 'monounsaturated-fat_100g',\n",
+       " 'monounsaturated-fat_serving',\n",
+       " 'monounsaturated-fat_unit',\n",
+       " 'monounsaturated-fat_value',\n",
+       " 'polyunsaturated-fat',\n",
+       " 'polyunsaturated-fat_100g',\n",
+       " 'polyunsaturated-fat_serving',\n",
+       " 'polyunsaturated-fat_unit',\n",
+       " 'polyunsaturated-fat_value',\n",
+       " 'salt_modifier',\n",
+       " 'sodium_modifier',\n",
+       " 'sugars_modifier',\n",
+       " 'fr-fibres-alimentaired',\n",
+       " 'fr-fibres-alimentaired_100g',\n",
+       " 'fr-fibres-alimentaired_label',\n",
+       " 'fr-fibres-alimentaired_unit',\n",
+       " 'fr-fibres-alimentaired_value',\n",
+       " 'potassium',\n",
+       " 'potassium_100g',\n",
+       " 'potassium_serving',\n",
+       " 'potassium_unit',\n",
+       " 'potassium_value',\n",
+       " 'cholesterol',\n",
+       " 'cholesterol_100g',\n",
+       " 'cholesterol_serving',\n",
+       " 'cholesterol_unit',\n",
+       " 'cholesterol_value',\n",
+       " 'polyols',\n",
+       " 'polyols_100g',\n",
+       " 'polyols_serving',\n",
+       " 'polyols_unit',\n",
+       " 'polyols_value',\n",
+       " 'soluble-fiber',\n",
+       " 'soluble-fiber_100g',\n",
+       " 'soluble-fiber_serving',\n",
+       " 'soluble-fiber_unit',\n",
+       " 'soluble-fiber_value',\n",
+       " 'trans-fat',\n",
+       " 'trans-fat_100g',\n",
+       " 'trans-fat_serving',\n",
+       " 'trans-fat_unit',\n",
+       " 'trans-fat_value',\n",
+       " 'vitamin-a',\n",
+       " 'vitamin-a_100g',\n",
+       " 'vitamin-a_serving',\n",
+       " 'vitamin-a_unit',\n",
+       " 'vitamin-a_value',\n",
+       " 'vitamin-b6',\n",
+       " 'vitamin-b6_100g',\n",
+       " 'vitamin-b6_serving',\n",
+       " 'vitamin-b6_unit',\n",
+       " 'vitamin-b6_value',\n",
+       " 'fat_modifier',\n",
+       " 'nutrition-score-fr-producer',\n",
+       " 'nutrition-score-fr-producer_100g',\n",
+       " 'nutrition-score-fr-producer_unit',\n",
+       " 'nutrition-score-fr-producer_value',\n",
+       " 'monounsaturated-fat_label',\n",
+       " 'polyunsaturated-fat_label',\n",
+       " 'carbohydrates_prepared',\n",
+       " 'carbohydrates_prepared_100g',\n",
+       " 'carbohydrates_prepared_serving',\n",
+       " 'carbohydrates_prepared_unit',\n",
+       " 'carbohydrates_prepared_value',\n",
+       " 'energy-kcal_prepared',\n",
+       " 'energy-kcal_prepared_100g',\n",
+       " 'energy-kcal_prepared_serving',\n",
+       " 'energy-kcal_prepared_unit',\n",
+       " 'energy-kcal_prepared_value',\n",
+       " 'energy-kj_prepared',\n",
+       " 'energy-kj_prepared_100g',\n",
+       " 'energy-kj_prepared_serving',\n",
+       " 'energy-kj_prepared_unit',\n",
+       " 'energy-kj_prepared_value',\n",
+       " 'energy_prepared',\n",
+       " 'energy_prepared_100g',\n",
+       " 'energy_prepared_serving',\n",
+       " 'energy_prepared_unit',\n",
+       " 'energy_prepared_value',\n",
+       " 'fat_prepared',\n",
+       " 'fat_prepared_100g',\n",
+       " 'fat_prepared_serving',\n",
+       " 'fat_prepared_unit',\n",
+       " 'fat_prepared_value',\n",
+       " 'fiber_prepared',\n",
+       " 'fiber_prepared_100g',\n",
+       " 'fiber_prepared_serving',\n",
+       " 'fiber_prepared_unit',\n",
+       " 'fiber_prepared_value',\n",
+       " 'proteins_prepared',\n",
+       " 'proteins_prepared_100g',\n",
+       " 'proteins_prepared_serving',\n",
+       " 'proteins_prepared_unit',\n",
+       " 'proteins_prepared_value',\n",
+       " 'salt_prepared',\n",
+       " 'salt_prepared_100g',\n",
+       " 'salt_prepared_serving',\n",
+       " 'salt_prepared_unit',\n",
+       " 'salt_prepared_value',\n",
+       " 'saturated-fat_prepared',\n",
+       " 'saturated-fat_prepared_100g',\n",
+       " 'saturated-fat_prepared_serving',\n",
+       " 'saturated-fat_prepared_unit',\n",
+       " 'saturated-fat_prepared_value',\n",
+       " 'sodium_prepared',\n",
+       " 'sodium_prepared_100g',\n",
+       " 'sodium_prepared_serving',\n",
+       " 'sodium_prepared_unit',\n",
+       " 'sodium_prepared_value',\n",
+       " 'sugars_prepared',\n",
+       " 'sugars_prepared_100g',\n",
+       " 'sugars_prepared_serving',\n",
+       " 'sugars_prepared_unit',\n",
+       " 'sugars_prepared_value',\n",
+       " 'calcium_label',\n",
+       " 'vitamin-a_label',\n",
+       " 'carbohydrates_modifier',\n",
+       " 'proteins_modifier',\n",
+       " 'beta-glucan',\n",
+       " 'beta-glucan_100g',\n",
+       " 'beta-glucan_label',\n",
+       " 'beta-glucan_serving',\n",
+       " 'beta-glucan_unit',\n",
+       " 'beta-glucan_value',\n",
+       " 'pantothenic-acid',\n",
+       " 'pantothenic-acid_100g',\n",
+       " 'pantothenic-acid_label',\n",
+       " 'pantothenic-acid_serving',\n",
+       " 'pantothenic-acid_unit',\n",
+       " 'pantothenic-acid_value',\n",
+       " 'vitamin-b6_label',\n",
+       " 'carbon-footprint',\n",
+       " 'carbon-footprint_100g',\n",
+       " 'carbon-footprint_serving',\n",
+       " 'carbon-footprint_unit',\n",
+       " 'carbon-footprint_value',\n",
+       " 'cocoa',\n",
+       " 'cocoa_100g',\n",
+       " 'cocoa_label',\n",
+       " 'cocoa_serving',\n",
+       " 'cocoa_unit',\n",
+       " 'cocoa_value',\n",
+       " 'phylloquinone',\n",
+       " 'phylloquinone_100g',\n",
+       " 'phylloquinone_label',\n",
+       " 'phylloquinone_unit',\n",
+       " 'phylloquinone_value',\n",
+       " 'fruits-vegetables-nuts_label',\n",
+       " 'panthothensaure',\n",
+       " 'panthothensaure_100g',\n",
+       " 'panthothensaure_label',\n",
+       " 'panthothensaure_unit',\n",
+       " 'panthothensaure_value',\n",
+       " 'manganese',\n",
+       " 'manganese_100g',\n",
+       " 'manganese_label',\n",
+       " 'manganese_unit',\n",
+       " 'manganese_value',\n",
+       " 'copper',\n",
+       " 'copper_100g',\n",
+       " 'copper_serving',\n",
+       " 'copper_unit',\n",
+       " 'copper_value',\n",
+       " 'insoluble-fiber',\n",
+       " 'insoluble-fiber_100g',\n",
+       " 'insoluble-fiber_serving',\n",
+       " 'insoluble-fiber_unit',\n",
+       " 'insoluble-fiber_value',\n",
+       " 'nutrition-score-fr-producer_serving',\n",
+       " 'energy-g',\n",
+       " 'energy-g_100g',\n",
+       " 'energy-g_serving',\n",
+       " 'energy-g_unit',\n",
+       " 'energy-g_value',\n",
+       " 'lactose',\n",
+       " 'lactose_100g',\n",
+       " 'lactose_label',\n",
+       " 'lactose_unit',\n",
+       " 'lactose_value',\n",
+       " 'alpha-linolenic-acid',\n",
+       " 'alpha-linolenic-acid_100g',\n",
+       " 'alpha-linolenic-acid_label',\n",
+       " 'alpha-linolenic-acid_unit',\n",
+       " 'alpha-linolenic-acid_value',\n",
+       " 'linoleic-acid',\n",
+       " 'linoleic-acid_100g',\n",
+       " 'linoleic-acid_label',\n",
+       " 'linoleic-acid_unit',\n",
+       " 'linoleic-acid_value',\n",
+       " 'selenium',\n",
+       " 'selenium_100g',\n",
+       " 'selenium_unit',\n",
+       " 'selenium_value',\n",
+       " 'en-lycopin',\n",
+       " 'en-lycopin_100g',\n",
+       " 'en-lycopin_label',\n",
+       " 'en-lycopin_unit',\n",
+       " 'en-lycopin_value',\n",
+       " 'manganese_serving',\n",
+       " 'phylloquinone_serving',\n",
+       " 'selenium_serving',\n",
+       " 'vitamin-k',\n",
+       " 'vitamin-k_100g',\n",
+       " 'vitamin-k_serving',\n",
+       " 'vitamin-k_unit',\n",
+       " 'vitamin-k_value',\n",
+       " 'docosahexaenoic-acid',\n",
+       " 'docosahexaenoic-acid_100g',\n",
+       " 'docosahexaenoic-acid_serving',\n",
+       " 'docosahexaenoic-acid_unit',\n",
+       " 'docosahexaenoic-acid_value',\n",
+       " 'omega-6-fat',\n",
+       " 'omega-6-fat_100g',\n",
+       " 'omega-6-fat_serving',\n",
+       " 'omega-6-fat_unit',\n",
+       " 'omega-6-fat_value',\n",
+       " 'omega-3-fat',\n",
+       " 'omega-3-fat_100g',\n",
+       " 'omega-3-fat_label',\n",
+       " 'omega-3-fat_unit',\n",
+       " 'omega-3-fat_value',\n",
+       " 'omega-6-fat_label',\n",
+       " 'potassium_label']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
