--- a/notebooks/test_api_data.ipynb
+++ b/notebooks/test_api_data.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mspawn /conda ENOENT. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -44,25 +46,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'/Users/mohammadzainabbas/Masters/CS/Decision-Modelling/nutri-score'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mspawn /conda ENOENT. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
     "pd.set_option('display.max_columns', None)\n",
     "parent_dir = abspath(join(getcwd(), pardir))\n",
     "data_dir = join(parent_dir, 'data')\n",
-    "data_file = join(data_dir, 'products.csv')\n",
+    "data_file = join(data_dir, 'products1.csv')\n",
     "parent_dir"
    ]
   },
