--- a/notebooks/test_api_data.ipynb
+++ b/notebooks/test_api_data.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload\n",
@@ -16,7 +25,6 @@
     "\n",
     "from dataclasses import dataclass, field\n",
     "\n",
-    "import dask.dataframe as dd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from numpy import matrixlib as npmat\n",
@@ -107,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
